trunk/Archive2/8e/ff0a9ce4a3eab6/output
main.cpp: In function 'int main()':
main.cpp:14:6: error: missing template arguments before '<<' token
     A<<int>::i = 3;
      ^
main.cpp:14:8: error: expected primary-expression before 'int'
     A<<int>::i = 3;
        ^
